force-app/main/default/objects/Account_Manager__mdt/Account_Manager__mdt.object-meta.xml
<CustomObject>
    <description>List of Account managers specific to country</description>
    <label>Account Manager</label>
    <pluralLabel>Account Managers</pluralLabel>
</CustomObject>