force-app/main/default/objects/Account_Manager__mdt/fields/Account_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Account_OwnerId__c</fullName>
    <label>Account OwnerId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>