force-app/main/default/objects/Account_Manager__mdt/fields/Agency_Sales_Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Sales_Region_Name__c</fullName>
    <label>Agency Sales Region Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>