force-app/main/default/objects/Account_Manager__mdt/fields/Agency_Sales_Region_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_Sales_Region_Number__c</fullName>
    <label>Agency Sales Region Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>