force-app/main/default/objects/Account_Manager__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>