force-app/main/default/objects/Account_Manager__mdt/listViews/All_with_all_fields.listView-meta.xml
<ListView>
    <fullName>All_with_all_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Agency_Sales_Region_Name__c</columns>
    <columns>Agency_Sales_Region_Number__c</columns>
    <columns>Country_Code__c</columns>
    <columns>Account_OwnerId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with all fields</label>
    <language>en_US</language>
</ListView>